--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -11,7 +11,7 @@ project(${exercise} CXX)
 set(Boost_USE_STATIC_LIBS ON)
 set(Boost_USE_MULTITHREADED ON)
 set(Boost_USE_STATIC_RUNTIME OFF)
-find_package(Boost 1.55 REQUIRED COMPONENTS unit_test_framework date_time regex)
+find_package(Boost 1.59 REQUIRED COMPONENTS unit_test_framework date_time regex)
 
 # Enable C++11 features on gcc/clang
 if("${CMAKE_CXX_COMPILER_ID}" MATCHES "(GNU|Clang)")
@@ -33,15 +33,8 @@ else()
     set(exercise_cpp "")
 endif()
 
-# Include a test helper header if it exists
-if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/require_equal_containers.h)
-    set(test_helper require_equal_containers.h)
-else()
-    set(test_helper "")
-endif()
-
 # Build executable from sources and headers
-add_executable(${exercise} ${file}_test.cpp ${test_helper} ${exercise_cpp} ${file}.h)
+add_executable(${exercise} ${file}_test.cpp ${exercise_cpp} ${file}.h)
 
 # We need boost includes
 target_include_directories(${exercise} PRIVATE ${Boost_INCLUDE_DIRS})
